<resources>
    <string name="app_name">中道移动办公</string>

    <string name="sale_name">销售单</string>
    <string name="sale_search_name">销售单查询</string>
    <string name="pan_name">盘点单</string>
    <string name="part_name">配件管理</string>
    <string name="clint_name">客户管理</string>
    <string name="supply_name">供应商管理</string>
    <string name="house_name">库存查询</string>

    <string name="login_name_hint">请输入操作员</string>
    <string name="login_pass_hint">请输入密码</string>
    <string name="login_remember_name">记住用户名</string>
    <string name="login_btn_text">登录</string>
    <string name="login_setip_text">设置IP</string>
    <string name="login_online_text">在线人员</string>
    <string name="login_imei_text">本机串号</string>
    <string name="login_help_text">帮助</string>

    <string name="dialog_setip1_text">使用服务器名称、IP、托管域名</string>
    <string name="dialog_setip2_text">使用“王者之路”IP地址解析账号</string>
    <string name="dialog_setip1_server_name">服务器名：</string>
    <string name="dialog_setip2_server_no">账号：</string>
    <string name="dialog_setip2_server_pass">密码：</string>
    <string name="dialog_setip2_server_port">端口：</string>
    <string name="dialog_setip2_server_suffix">后缀：</string>
    <string name="dialog_setip1_server_test">测试地址</string>
    <string name="dialog_setip_save_text">保存</string>
    <string name="dialog_setip_cancel_text">取消</string>

    <string name="dialog_online_text">当前在线人数</string>
    <string name="dialog_online_name_text">操作员</string>
    <string name="dialog_online_date_text">最后登录时间</string>

    <string name="dialog_loading_text">加载中...</string>

    <string name="dialog_help_title">登陆帮助</string>
    <string name="dialog_help_text">
                        一、手机App端配置\n
                        \t\t\t1.点击“设置IP”，若有固定IP或托管域名，直接在服务器处输入服务器地址，若端口不是80，则再加上:端口号，如：202.13.55.67:8。\n
                        \t\t\t2.自建服务器且没有固定IP，点击“使用王者之路”，输入王者之旅的账号、密码、端口、后缀（一般为/zdApp）。\n
                        \t\t\t3.点击保存后登录。\n
                        二、登录App时异常报错处理\n
                        \t\t\t1.报“连接服务器失败，请检查配置”，原因如下：\n
                        \t\t\t\t\t1）若为王者之路模式，检查端口、后缀是否正确。\n
                        \t\t\t\t\t2）PC端是否正确配置了路由器，映射好了端口。\n
                        \t\t\t\t\t3）PC端是否被防火墙拦截。\n
                        \t\t\t\t\t4）服务器zdApp目录下的Web.config中的数据库配置是否正确。\n
                        \t\t\t2.报“注册站点为0”，原因可能如下：\n
                        \t\t\t\t\t1.请先在PC端，中道客户端的主模块登录一下。\n
                        \t\t\t\t\t2.服务器时间日期格式不对。\n
                        \t\t\t\t\t3.确实没有注册移动办公点数。</string>

    <string name="toady_count">今日开单</string>
    <string name="toady_money">今日总额</string>

    <string name="flb_bill_text">业务</string>
    <string name="flb_stats_text">统计</string>
    <string name="flb_my_text">我的</string>

    <string name="report_day">日统计</string>
    <string name="report_month">月统计</string>
    <string name="report_year">年统计</string>
    <string name="report_boss">老板一张表</string>
    <string name="report_xiao">销售单汇总</string>
    <string name="report_custom">自定义区间</string>

    <string name="filter_text">筛选</string>
    <string name="filter_part_category_text">全部类别</string>
    <string name="filter_type_category_text">全部车型</string>
    <string name="filter_tp_text">图号</string>
    <string name="filter_locator_text">货位</string>
    <string name="filter_locator_to_text">到</string>
    <string name="filter_stock_text">仓库</string>
    <string name="filter_all_text">全部</string>
    <string name="filter_reset_text">重置</string>
    <string name="filter_confirm_text">确定</string>

    <string name="category_text">分类</string>

    <string name="confirm_text">确定</string>

    <string name="condition_hint_text">编码、名称、车型</string>
    <string name="condition_speaker_text">说出你要的商品</string>
    <string name="search_text">搜索</string>

    <string name="loadmore_text">正在加载更多...</string>
    <string name="loadnull_text">已显示全部商品</string>
</resources>
