<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_count"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="0"
        android:textSize="22sp"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/qb_px_10"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_online_text"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:textSize="18sp"/>

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="最大站点数：2"
        android:textSize="12sp"
        android:gravity="center_horizontal"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/color_dialog_bg_gray"
        android:padding="@dimen/qb_px_4">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/dialog_online_name_text"
            android:gravity="center_horizontal"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:text="@string/dialog_online_date_text"
            android:gravity="center_horizontal"/>
    </LinearLayout>

    <ListView
        android:id="@+id/lv_online"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_dialog_bg_gray">

    </ListView>

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="2018-07-18"
        android:gravity="center_horizontal"
        android:background="@color/color_dialog_bg_gray"
        android:padding="@dimen/qb_px_4"/>


</LinearLayout>