<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_30"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_text"
            android:paddingLeft="@dimen/qb_px_10"
            android:textColor="@color/filter_text_color" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/color_frame"/>

    <LinearLayout
        android:id="@+id/ll_show_all_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/qb_px_6"
        android:paddingBottom="@dimen/qb_px_6"
        android:paddingLeft="@dimen/qb_px_10"
        android:paddingRight="@dimen/qb_px_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_part_category_text"
            android:textColor="@color/filter_text_color"/>

        <TextView
            android:id="@+id/tv_category_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:gravity="right"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/color_frame"/>

    <LinearLayout
        android:id="@+id/ll_show_all_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/qb_px_6"
        android:paddingBottom="@dimen/qb_px_6"
        android:paddingLeft="@dimen/qb_px_10"
        android:paddingRight="@dimen/qb_px_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_type_category_text"
            android:textColor="@color/filter_text_color"/>

        <TextView
            android:id="@+id/tv_type_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:gravity="right"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/color_frame"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/qb_px_6"
        android:paddingBottom="@dimen/qb_px_6"
        android:paddingLeft="@dimen/qb_px_10"
        android:paddingRight="@dimen/qb_px_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_tp_text"
            android:textColor="@color/filter_text_color"/>

        <EditText
            android:id="@+id/tv_tp_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:maxLines="1"
            android:background="@null"
            android:layout_marginLeft="@dimen/qb_px_4"
            android:gravity="right"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/qb_px_1"
        android:background="@color/color_frame"/>

    <LinearLayout
        android:id="@+id/ll_show_all_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:paddingTop="@dimen/qb_px_6"
        android:paddingBottom="@dimen/qb_px_6"
        android:paddingLeft="@dimen/qb_px_10"
        android:paddingRight="@dimen/qb_px_10">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_stock_text"
            android:textColor="@color/filter_text_color"/>

        <TextView
            android:id="@+id/tv_choose_stock_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/colorPrimary"
            android:gravity="right"/>

        <ImageView
            android:id="@+id/iv_showmore_stock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_down"/>
    </LinearLayout>

    <GridView
        android:id="@+id/gv_stock"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:numColumns="3"
        android:horizontalSpacing="15dp"
        android:verticalSpacing="10dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:paddingLeft="@dimen/qb_px_10"
        android:paddingRight="@dimen/qb_px_10">
    </GridView>
</LinearLayout>